--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ expiration.</p>
 <li><a href="//media.twiliocdn.com/sdk/rtc/android/common/releases/0.1.10.b62-b0c2c3f/docs">Twilio Common Reference</a></li>
 </ul>
 </div><div data-title="Initializing the Client" data-file="app/src/main/java/com/twilio/twiliochat/ipmessaging/IPMessagingClientManager.java" data-highlight="106-141" class="step"><h2 id="initializing-the-ip-messaging-client">Initializing the IP Messaging Client</h2>
-<p>The only thing you need to create a client, is an access token. This token
+<p>The only thing you need to create a client is an access token. This token
 holds information about your Twilio account and IP Messaging API keys. We have created a web
 version of Twilio chat in different languages. You can use any of these to generate the token:</p>
 <ul>
@@ -54,23 +54,24 @@ to make a request to our server and get the access token.</p>
 </ul>
 </div><div data-title="Getting the Channel List" data-file="app/src/main/java/com/twilio/twiliochat/ipmessaging/ChannelManager.java" data-highlight="64-98" class="step"><h2 id="getting-the-channel-list">Getting the Channel List</h2>
 <p>Our <code>ChannelManager</code> class takes care of everything related to channels.
-The first thing we need to do when the class is initialized, is to store
+The first thing we need to do, when the class is initialized, is to store
 a list of channels of type <code>Channels</code> that we get by calling the method <code>getChannels</code>
 from the IP Messaging Client.</p>
 <p>Once we have a <code>Channels</code> object, we can fetch the actual channels using the
-<code>Channels&#39;</code> method <code>loadChannelsWithListener</code>. Once that operation
-finishes successfully, call the method <code>getChannels</code> on the same object, to
-get an array of channels.</p>
+<code>Channels&#39;</code> method <code>loadChannelsWithListener</code>. When the operation
+finishes successfully, in order to get an array of channels, call the
+method <code>getChannels</code> on the same object.</p>
 </div><div data-title="Listen to Client Events" data-file="app/src/main/java/com/twilio/twiliochat/activities/MainChatActivity.java" data-highlight="452-467" class="step"><h2 id="listen-to-client-events">Listen to Client Events</h2>
-<p>The IP Messaging Client will trigger events such as <code>onChannelAdd</code> or <code>onChannelDelete</code>.
-In our application, given the event that a channel is deleted or created, we&#39;ll reload the
+<p>The IP Messaging Client will trigger events such as <code>onChannelAdd</code> or <code>onChannelDelete</code>
+on our application. Given the creation or deletion of a channel we&#39;ll reload the
 channel list in the sliding panel. If a channel is deleted and we were currently joined to that
 channel, the application will automatically join the general channel.</p>
 <p>You must set your <code>IPMessagingClient</code> to listen to events using a
 <a href="https://media.twiliocdn.com/sdk/rtc/android/ip-messaging/releases/0.4.10.b204-57cc05a/docs/com/twilio/ipmessaging/IPMessagingClientListener.html">IPMessagingClientListener</a>.
 In this particular case, <code>MainChatActivity</code> implements IPMessagingClientListener, but it&#39;s methods
-are called from the ChannelManager class that also implements IPMessagingClientListener and is actually
-the client&#39;s listener. Channel manager is used as an event handler proxy.
+are called from the ChannelManager class that also implements IPMessagingClientListener (who actually is the
+client&#39;s listener).
+Channel manager is used as an event handler proxy.
 Twilio chat sets the listener when loading the channels.</p>
 <hr>
 <p><strong>See Also:</strong></p>
@@ -80,8 +81,8 @@ Twilio chat sets the listener when loading the channels.</p>
 </ul>
 </div><div data-title="Join the General Channel" data-file="app/src/main/java/com/twilio/twiliochat/ipmessaging/ChannelManager.java" data-highlight="117-166" class="step"><h2 id="join-the-general-channel">Join the General Channel</h2>
 <p>This application will try to join a channel called &quot;General Channel&quot; when it starts.
-If the channel doesn&#39;t exist, we&#39;ll create one with that name. The scope of
-this example application will show you how to work only with public channels,
+If the channel doesn&#39;t exist it&#39;ll create one with that name. The scope of
+this example application will show you how to work only with public channels
 but the IP Messaging client allows you to create private channels and handle
 invitations.</p>
 <p>Notice we set a unique name for the general channel as we don&#39;t want to
@@ -95,16 +96,16 @@ and here we implemented the following methods that listen to channel events:</p>
 <li><code>memberLeft</code>: When someone leaves the channel.</li>
 </ul>
 <p>As you may have noticed, each one of these methods include useful objects
-as parameters, such as the actual message that was added to the channel.</p>
+as parameters. One example is the actual message that was added to the channel.</p>
 </div><div data-title="Joining Other Channels" data-file="app/src/main/java/com/twilio/twiliochat/fragments/MainChatFragment.java" data-highlight="109-146" class="step"><h2 id="joining-other-channels">Joining Other Channels</h2>
 <p>The application uses a <a href="//developer.android.com/reference/android/support/v4/widget/DrawerLayout.html">Drawer Layout</a>
 to show a list of the channels created for that Twilio account.</p>
-<p>When you tap on the name of a channel from the sidebar, that channel is set
+<p>When you tap on the name of a channel, from the sidebar, that channel is set
 on the <code>MainChatFragment</code>. The <code>setCurrentChannel</code> method takes care of joining
 to the selected channel and loading the messages.</p>
 </div><div data-title="Creating a Channel" data-file="app/src/main/java/com/twilio/twiliochat/ipmessaging/ChannelManager.java" data-highlight="100-115" class="step"><h2 id="creating-a-channel">Creating a Channel</h2>
 <p>We use an input dialog so the user can type the name of the new channel.
-The only restriction here, is that the user can&#39;t create a channel called
+The only restriction here is that the user can&#39;t create a channel called
 &quot;General Channel&quot;. Other than that, creating a channel is as simple as calling
 <code>createChannel(Map&lt;String, Object&gt; options, CreateChannelListener listener)</code>
 where <code>options</code> has the following required keys:</p>
@@ -112,14 +113,14 @@ where <code>options</code> has the following required keys:</p>
 <li>Constants.CHANNEL_FRIENDLY_NAME</li>
 <li>Constants.CHANNEL_TYPE</li>
 </ul>
-<p>You can use additional keys to create a channel with more details, as we did
+<p>You can use additional keys to create a channel with more details as we did
 with general channel to set a unique name. There&#39;s a list of keys you can use
 <a href="//media.twiliocdn.com/sdk/rtc/android/ip-messaging/releases/0.4.10.b204-57cc05a/docs/com/twilio/ipmessaging/Constants.html">here</a>.</p>
 </div><div data-title="Deleting a Channel" data-file="app/src/main/java/com/twilio/twiliochat/ipmessaging/ChannelManager.java" data-highlight="60-62" class="step"><h2 id="deleting-a-channel">Deleting a Channel</h2>
-<p>Deleting a channel is even more simple than creating one. The application
+<p>Deleting a channel is easier than creating one. The application
 lets the user delete the channel they are currently joined to through a menu
-option. The only thing you need to do to actually delete the channel from Twilio,
-is call the <code>destroy</code> method on the channel you are trying to delete. But you still
+option. In order to delete the channel from Twilio you have to call
+the <code>destroy</code> method on the channel you are trying to delete. But you still
 need to provide a <code>StatusListener</code> to handle the success or failure of the operation.</p>
 </div><div data-title="Where to Next?" class="step"><h2 id="where-to-next-">Where to Next?</h2>
 <p>That&#39;s it! We&#39;ve just implemented a simple chat application for Android.</p>
